added fontawsome icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <!-- css -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/d086cba1c1.js" crossorigin="anonymous"></script>
     <title>Hungry Monster</title>
   </head>
   <body>
