--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <!-- navbar end -->
     <main class="container">
       <!-- search section start -->
-      <section id="search-sec">
-        <div class="mt-4 mb-5">
-          <div class="input-group mb-3 m-auto w-25">
+      <section id="search-sec row">
+        <div class="mt-4 mb-5 m-auto col-10 col-md-6">
+          <div class=" mb-3 input-group">
             <input type="text" class="form-control" id="searchInput" placeholder="Search for Meal..." aria-describedby="searchButton">
             <button class="btn text-white fs-5" type="button" id="searchButton">Search</button>
           </div>
